@@ -31,14 +31,14 @@ package com.yubico.client.v2;
 	Written by Simon Buckle <simon@webteq.eu>, September 2011.
 */
 
-import com.yubico.client.v2.exceptions.YubicoSignatureException;
-
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
+
+import com.yubico.client.v2.exceptions.YubicoSignatureException;
 import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import org.apache.commons.codec.binary.Base64;
 
 public class Signature {
 
@@ -52,7 +52,7 @@ public class Signature {
 			mac.init(signingKey);        
 			byte[] raw = mac.doFinal(data.getBytes("UTF-8"));
 			// Base64 encode the result, use old API call to work on android
-			return DatatypeConverter.printBase64Binary(raw);
+			return new String(Base64.encodeBase64(raw));
 		} catch (NoSuchAlgorithmException e) {
 			throw new YubicoSignatureException("No such algorithm (HMAC_SHA1?)", e);
 		} catch (InvalidKeyException e) {
